2014-02-08  Mikael Morin  <mikael@gcc.gnu.org>

	PR fortran/57033
	* primary.c (gfc_convert_to_structure_constructor): Avoid null pointer
	dereference.

2014-02-08  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/59906
	* trans-array.c (gfc_add_loop_ss_code): In the case of character
	SS_REFERENCE, use gfc_conv_string_parameter to ensure that a
	pointer to the string is stored.
	* trans-expr.c (gfc_conv_expr_reference): Likewise, use
	gfc_conv_string_parameter to ensure that a pointer to is passed
	to the elemental function.

2014-02-03  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/59941
	* expr.c (replace_comp): Check for isym to avoid ICE.

2014-01-27  Mikael Morin  <mikael@gcc.gnu.org>

	PR fortran/58007
	* module.c (skip_list): Don't use default argument value.
	(load_derived_extensions, read_module): Update callers.

2014-01-26  Mikael Morin  <mikael@gcc.gnu.org>

	PR fortran/58007
	* module.c (fp2, find_pointer2): Remove.
	(mio_component_ref): Don't forcedfully set the containing derived type
	symbol for loading.  Remove unused argument.
	(mio_ref): Update caller
	(skip_list): New argument nest_level.  Initialize level with the new
	argument.
	(read_module): Add forced pointer components association for derived
	type symbols.

2014-01-11  Janus Weil  <janus@gcc.gnu.org>

	Backport from mainline
	2013-12-29  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/59612
	PR fortran/57042
	* dump-parse-tree.c (show_typespec): Check for charlen.
	* invoke.texi: Fix documentation of -fdump-fortran-optimized and
	-fdump-parse-tree.

2013-11-17  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/58771
	* trans-io.c (transfer_expr): If the backend_decl for a derived
	type is missing, build it with gfc_typenode_for_spec.

2013-11-02  Janus Weil  <janus@gcc.gnu.org>

	Backport from mainline
	2013-09-23  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/58355
	* decl.c (check_extended_derived_type): Prevent segfault, modify error
	message.

2013-08-11  Janus Weil  <janus@gcc.gnu.org>
