@@ -1,3 +1,11 @@
+2014-02-20  Janus Weil  <janus@gcc.gnu.org>
+
+	Backport from mainline
+	2014-02-17  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/55907
+	* gfortran.dg/init_flag_12.f90: New.
+
 2014-02-18  Kai Tietz  <ktietz@redhat.com>
 
 	PR target/60193
