@@ -1,3 +1,12 @@
+2014-02-20  Janus Weil  <janus@gcc.gnu.org>
+
+	Backport from mainline
+	2014-02-17  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/55907
+	* resolve.c (build_default_init_expr): Don't initialize character
+	variable if -fno-automatic is given.
+
 2014-02-08  Mikael Morin  <mikael@gcc.gnu.org>
 
 	PR fortran/57033
